Add git job to Maven workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,10 +3,12 @@ name: CI Pipeline
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+  
 jobs:
+git:
+     runs-on: ubuntu-latest
+   steps:
+      - uses: actions/checkout@v4  
   build:
 
     runs-on: ubuntu-latest
